--- a/geoQuiz/home.html
+++ b/geoQuiz/home.html
@@ -20,6 +20,8 @@
             <p>Name of Country here</p>
         </div>
 
+        <div id="json"></div>
+
         <div id="options">
             <button id="test" value="0">wrong option</button><br />
             <button id="test2" value="1">correct option</button>
