--- a/geoQuiz/home.html
+++ b/geoQuiz/home.html
@@ -6,6 +6,7 @@
     <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
     <script type="text/javascript" src="general.js"></script>
     <script type="text/javascript" src="gameController.js"></script>
+    <script type="text/javascript" src="Country.js"></script>
 </head>
 <body>
     <div id="container">
@@ -16,16 +17,9 @@
 
 
 
-        <div id="country">
-            <p>Name of Country here</p>
-        </div>
+        <div id="country"></div>
 
-        <div id="json"></div>
-
-        <div id="options">
-            <button id="test" value="0">wrong option</button><br />
-            <button id="test2" value="1">correct option</button>
-        </div>
+        <div id="options"></div>
         
         <p id="score">Score: 0</p>
     </div> 
