countries now load into array

--- a/geoQuiz/home.html
+++ b/geoQuiz/home.html
@@ -21,7 +21,7 @@
 
         <div id="options"></div>
         
-        <p id="score">Score: 0</p>
+        <p id="score"></p>
     </div> 
 </body>
 </html>
