applying some css

--- a/geoQuiz/home.html
+++ b/geoQuiz/home.html
@@ -10,13 +10,12 @@
 </head>
 <body>
     <div id="container">
-        <button id="newGame">New Game</button>
         <img class="visibile" id="life1" src="life.png" alt="heart" />
         <img class="visibile" id="life2" src="life.png" alt="heart" />
         <img class="visibile" id="life3" src="life.png" alt="heart" />
 
-
-
+        <button id="newGame">Play geoQuiz</button>
+        
         <div id="country"></div>
 
         <div id="options"></div>
