--- a/geoQuiz/home.html
+++ b/geoQuiz/home.html
@@ -14,7 +14,8 @@
         <img class="visibile" id="life2" src="life.png" alt="heart" />
         <img class="visibile" id="life3" src="life.png" alt="heart" />
 
-        <button id="newGame">Play geoQuiz</button>
+        <button id="newGame">Capitals - geoQuiz</button>
+       <!-- <button id="newGame2">TBD - geoQuiz2</button>-->
         
         <div id="country"></div>
 
