--- a/geoQuiz/home.html
+++ b/geoQuiz/home.html
@@ -4,17 +4,17 @@
     <title>geoQuiz</title>
     <link type="text/css" rel="stylesheet" href="style.css" />
     <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
+    <script type="text/javascript" src="Country.js"></script>
     <script type="text/javascript" src="general.js"></script>
     <script type="text/javascript" src="gameController.js"></script>
-    <script type="text/javascript" src="Country.js"></script>
 </head>
 <body>
     <div id="container">
-        <img class="visibile" id="life1" src="life.png" alt="heart" />
-        <img class="visibile" id="life2" src="life.png" alt="heart" />
-        <img class="visibile" id="life3" src="life.png" alt="heart" />
+        <img class="visibile" id="life1" src="life.png" width="110" height="110" alt="heart" />
+        <img class="visibile" id="life2" src="life.png" width="110" height="110" alt="heart" />
+        <img class="visibile" id="life3" src="life.png" width="110" height="110" alt="heart" />
 
-        <button id="newGame">Capitals - geoQuiz</button>
+        <button id="newGame">Capital Cities</button>
         
         <div id="country"></div>
 
