updated javascript, includes json file, ignores bin, obj folders

--- a/geoQuiz/home.html
+++ b/geoQuiz/home.html
@@ -20,6 +20,7 @@
 
         <div id="options"></div>
         
+        <button id="hint">3 Hints</button>
         <p id="score"></p>
     </div> 
 </body>
