trying to revert

--- a/geoQuiz/home.html
+++ b/geoQuiz/home.html
@@ -19,9 +19,11 @@
         <div id="country"></div>
 
         <div id="options"></div>
+
+        <p id="response"></p>
         
         <button id="hint">3 Hints</button>
-        <p id="score"></p>   
+        <p id="score"></p> 
     </div> 
 </body>
 </html>
