--- a/geoQuiz/home.html
+++ b/geoQuiz/home.html
@@ -4,6 +4,7 @@
     <title>geoQuiz</title>
     <link type="text/css" rel="stylesheet" href="style.css" />
     <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
+    <script src="//code.jquery.com/ui/1.11.1/jquery-ui.js"></script>
     <script type="text/javascript" src="Country.js"></script>
     <script type="text/javascript" src="general.js"></script>
     <script type="text/javascript" src="gameController.js"></script>
