excellent new css file, now works in chrome emulators, not silly firefox one

--- a/geoQuiz/home.html
+++ b/geoQuiz/home.html
@@ -1,6 +1,8 @@
 ﻿<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
+	<meta name="viewport" content="width=device-width, height=device-height, user-scalable=no, initial-scale=1" />
+
     <title>geoQuiz</title>
     <link type="text/css" rel="stylesheet" href="style.css" />
     <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
@@ -10,9 +12,9 @@
 </head>
 <body>
     <div id="container">
-        <img class="visibile" id="life1" src="life.png" width="110" height="110" alt="heart" />
-        <img class="visibile" id="life2" src="life.png" width="110" height="110" alt="heart" />
-        <img class="visibile" id="life3" src="life.png" width="110" height="110" alt="heart" />
+        <img class="visibile heart" id="life1" src="life.png" alt="heart" />
+        <img class="visibile heart" id="life2" src="life.png" alt="heart" />
+        <img class="visibile heart" id="life3" src="life.png" alt="heart" />
 
         <button id="newGame">Capital Cities</button>
         
